--- a/src/main/resources/org/flowdev/flowparser/output/graphviz/template.mustache
+++ b/src/main/resources/org/flowdev/flowparser/output/graphviz/template.mustache
@@ -8,8 +8,12 @@ digraph {{name}} {
 
   node [shape=plaintext,style=plain,rank=same];
 
-{{#connections}}  {{#fromOp}}{{fromOp}}:{{fromPort}}{{/fromOp}}{{^fromOp}}"{{fromPort}}"{{/fromOp}} -> {{#toOp}}{{toOp}}:{{toPort}}{{/toOp}}{{^toOp}}"{{toPort}}"{{/toOp}}{{#showDataType}} [label="{{dataType}}"]{{/showDataType}} ;
-{{/connections}}
-}
+    {{#connections}}  {{#fromOp}}{{fromOp}}:{{fromPort}}{{#hasFromPortIndex}}
+        .{{fromPortIndex}}{{/hasFromPortIndex}}{{/fromOp}}{{^fromOp}}"{{fromPort}}{{#hasFromPortIndex}}
+        .{{fromPortIndex}}{{/hasFromPortIndex}}"{{/fromOp}} -> {{#toOp}}{{toOp}}:{{toPort}}{{#hasToPortIndex}}
+        .{{toPortIndex}}{{/hasToPortIndex}}{{/toOp}}{{^toOp}}"{{toPort}}{{#hasToPortIndex}}
+        .{{toPortIndex}}{{/hasToPortIndex}}"{{/toOp}}{{#showDataType}} [label="{{dataType}}"]{{/showDataType}} ;
+    {{/connections}}
+    }
 </graphviz>
 
