--- a/src/main/resources/org/flowdev/flowparser/output/graphviz/template.mustache
+++ b/src/main/resources/org/flowdev/flowparser/output/graphviz/template.mustache
@@ -3,17 +3,20 @@ digraph {{name}} {
   // rankdir=LR;
   node [shape=Mrecord,style=filled,fillcolor="#00CC00",rank=same];
 
-{{#operations}}  {{name}} [label="{{name}}\n({{type}}){{#ports}}|{ {{#inPort}}<{{.}}> {{.}}{{/inPort}}|{{#outPort}}<{{.}}> {{.}}{{/outPort}} }{{/ports}}"{{#url}} URL="{{type}}Flow"{{/url}}] ;
+{{#operations}}  {{name}} [label="{{name}}\n({{type}}){{#ports}}
+|{ {{#inPort}}<{{.}}> {{.}}{{/inPort}}|{{#outPort}}<{{.}}> {{.}}{{/outPort}} }{{/ports}}"{{#url}}
+ URL="{{type}}Flow"{{/url}}] ;
 {{/operations}}
 
   node [shape=plaintext,style=plain,rank=same];
 
-    {{#connections}}{{#fromOp}}  {{fromOp}}:{{fromPort}}{{#hasFromPortIndex}}
-        .{{fromPortIndex}}{{/hasFromPortIndex}}{{/fromOp}}{{^fromOp}}  "{{fromPort}}{{#hasFromPortIndex}}
-        .{{fromPortIndex}}{{/hasFromPortIndex}}"{{/fromOp}} -> {{#toOp}}{{toOp}}:{{toPort}}{{#hasToPortIndex}}
-        .{{toPortIndex}}{{/hasToPortIndex}}{{/toOp}}{{^toOp}}"{{toPort}}{{#hasToPortIndex}}
-        .{{toPortIndex}}{{/hasToPortIndex}}"{{/toOp}}{{#showDataType}} [label="{{dataType}}"]{{/showDataType}} ;
-    {{/connections}}
-    }
+{{#connections}}{{#fromOp}}
+  {{fromOp}}:{{fromPort}}{{#hasFromPortIndex}}.{{fromPortIndex}}{{/hasFromPortIndex}}{{/fromOp}}{{^fromOp}}
+  "{{fromPort}}{{#hasFromPortIndex}}.{{fromPortIndex}}{{/hasFromPortIndex}}"{{/fromOp}}
+ -> {{#toOp}}{{toOp}}:{{toPort}}{{#hasToPortIndex}}.{{toPortIndex}}{{/hasToPortIndex}}{{/toOp}}{{^toOp}}
+"{{toPort}}{{#hasToPortIndex}}.{{toPortIndex}}{{/hasToPortIndex}}"{{/toOp}}{{#showDataType}}
+ [label="{{dataType}}"]{{/showDataType}} ;
+{{/connections}}
+}
 </graphviz>
 
