--- a/src/main/resources/org/flowdev/flowparser/output/graphviz/template.mustache
+++ b/src/main/resources/org/flowdev/flowparser/output/graphviz/template.mustache
@@ -4,18 +4,18 @@ digraph {{name}} {
   node [shape=Mrecord,style=filled,fillcolor="#00CC00",rank=same];
 
 {{#operations}}  {{name}} [label="{{name}}\n({{type}}){{#ports}}
-|{ {{#inPort}}<{{.}}{{#hasInPortIndex}}.{{inPortIndex}}{{/hasInPortIndex}}> {{.}}{{#hasInPortIndex}}.{{inPortIndex}}{{/hasInPortIndex}}{{/inPort}}|{{#outPort}}
-<{{.}}{{#hasOutPortIndex}}.{{outPortIndex}}{{/hasOutPortIndex}}> {{.}}{{#hasOutPortIndex}}.{{outPortIndex}}{{/hasOutPortIndex}}{{/outPort}} }{{/ports}}"{{#url}}
+|{ {{#inPort}}<{{name}}{{#hasIndex}}.{{index}}{{/hasIndex}}> {{name}}{{#hasIndex}}.{{index}}{{/hasIndex}}{{/inPort}}|{{#outPort}}
+<{{name}}{{#hasIndex}}.{{index}}{{/hasIndex}}> {{name}}{{#hasIndex}}.{{index}}{{/hasIndex}}{{/outPort}} }{{/ports}}"{{#url}}
  URL="{{type}}Flow"{{/url}}] ;
 {{/operations}}
 
   node [shape=plaintext,style=plain,rank=same];
 
 {{#connections}}{{#fromOp}}
-  {{fromOp}}:{{fromPort}}{{#hasFromPortIndex}}.{{fromPortIndex}}{{/hasFromPortIndex}}{{/fromOp}}{{^fromOp}}
-  "{{fromPort}}{{#hasFromPortIndex}}.{{fromPortIndex}}{{/hasFromPortIndex}}"{{/fromOp}}
- -> {{#toOp}}{{toOp}}:{{toPort}}{{#hasToPortIndex}}.{{toPortIndex}}{{/hasToPortIndex}}{{/toOp}}{{^toOp}}
-"{{toPort}}{{#hasToPortIndex}}.{{toPortIndex}}{{/hasToPortIndex}}"{{/toOp}}{{#showDataType}}
+  {{fromOp}}:{{#fromPort}}{{name}}{{#hasIndex}}.{{index}}{{/hasIndex}}{{/fromPort}}{{/fromOp}}{{^fromOp}}
+  {{#fromPort}}"{{name}}{{#hasIndex}}.{{index}}{{/hasIndex}}"{{/fromPort}}{{/fromOp}}
+ -> {{#toOp}}{{toOp}}:{{#toPort}}{{name}}{{#hasIndex}}.{{index}}{{/hasIndex}}{{/toPort}}{{/toOp}}{{^toOp}}
+{{#toPort}}"{{name}}{{#hasIndex}}.{{index}}{{/hasIndex}}"{{/toPort}}{{/toOp}}{{#showDataType}}
  [label="{{dataType}}"]{{/showDataType}} ;
 {{/connections}}
 }
