--- a/src/main/resources/org/flowdev/flowparser/output/adoc/template.mustache
+++ b/src/main/resources/org/flowdev/flowparser/output/adoc/template.mustache
@@ -2,7 +2,7 @@
 ....
 digraph {{name}} {
   // rankdir=LR;
-  node [shape=Mrecord,style=filled,fillcolor="#00CC00",rank=same];
+node [shape=Mrecord,style=filled,fillcolor="#428bca",rank=same];
 
 {{#operations}}  {{name}} [label="{{name}}\n({{type}}){{#portPairs}}
 |{ {{#inPort}}<{{name}}{{#hasIndex}}.{{index}}{{/hasIndex}}> {{name}}{{#hasIndex}}.{{index}}{{/hasIndex}}{{/inPort}}|{{#outPort}}
