--- a/src/main/resources/org/flowdev/flowparser/output/wiki/template.mustache
+++ b/src/main/resources/org/flowdev/flowparser/output/wiki/template.mustache
@@ -1,7 +1,7 @@
 <graphviz type="framed" caption="{{name}}" format="svg" location="center">
 digraph {{name}} {
   // rankdir=LR;
-  node [shape=Mrecord,style=filled,fillcolor="#00CC00",rank=same];
+    node [shape=Mrecord,style=filled,fillcolor="#428bca",rank=same];
 
 {{#operations}}  {{name}} [label="{{name}}\n({{type}}){{#portPairs}}
 |{ {{#inPort}}<{{name}}{{#hasIndex}}.{{index}}{{/hasIndex}}> {{name}}{{#hasIndex}}.{{index}}{{/hasIndex}}{{/inPort}}|{{#outPort}}
