--- a/src/main/resources/org/flowdev/flowparser/output/java/template.mustache
+++ b/src/main/resources/org/flowdev/flowparser/output/java/template.mustache
@@ -1,7 +1,7 @@
 package ;
 
 
-public class {{name}} {
+{{#flow}}public class {{name}} {
 {{#operations}}    private final {{type}} {{name}};
 {{/operations}}
 
@@ -34,3 +34,4 @@ public class {{name}} {
 {{/toOp}}{{/connections}}
 }
 
+{{/flow}}
